welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:41: error: not found: value faceAuMur
		if (!faceAuMur()) {
                     ^